[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_inspect"
version = "2.0.0a1"
description = ""
authors = []
dependencies = [
    "scikit-learn==1.7.1",
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "sphinx-autodoc-typehints==3.0.1",
    "backoff==2.2.1",
    "pandas==2.3.3",
    "openai==2.8.1",
    "litellm==1.80.10"
]

[tool.setuptools.packages.find]
where = ["src"]
include=["agent_inspect", "agent_inspect.*"]
